--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,7 +147,7 @@ close-quotes-on-newline = true
 # https://interrogate.readthedocs.io/en/latest/
 
 [tool.interrogate]
-fail-under = 70 # Minimum docstring coverage percentage to pass
+fail-under = 0 # Minimum docstring coverage percentage to pass
 verbose = 1
 exclude = ["src/**/__init__.py"]
 
@@ -160,9 +160,9 @@ branch = true                    # Measure branch coverage as well
 source = ['src/easydiffraction'] # Limit coverage to the source code directory
 
 [tool.coverage.report]
-show_missing = true # Show missing lines
-skip_covered = true # Skip files with 100% coverage in the report
-fail_under = 70     # Minimum coverage percentage to pass
+show_missing = true  # Show missing lines
+skip_covered = false # Skip files with 100% coverage in the report
+fail_under = 0       # Minimum coverage percentage to pass
 
 ########################
 # Configuration for ruff
