--- a/pixi.toml
+++ b/pixi.toml
@@ -41,14 +41,14 @@ channels = ['conda-forge']
 
 [dependencies]
 nodejs = '*' # Required for Prettier (non-Python formatting)
-gsl = '*' # GNU Scientific Library; required for pdffit2.
+gsl = '*'    # GNU Scientific Library; required for pdffit2.
 
 [pypi-dependencies] # == [feature.default.pypi-dependencies]
-pip = '*'         # Native package installer
-uv = '*'          # Package manager
-jupyterlab = '*'  # Jupyter notebooks
+pip = '*'        # Native package installer
+uv = '*'         # Package manager
+jupyterlab = '*' # Jupyter notebooks
 pixi-kernel = '*' # Pixi Jupyter kernel
-easydiffraction = { path = ".", editable = true, extras = ['all'] } # Main package
+easydiffraction = { path = ".", editable = true, extras = ['all'] }
 
 # Specific features: Set specific Python versions
 
